# Geopol-Forecast-Council

./: .gitignore  README.md  pyproject.toml
forecast/: __main__.py  config.py  grounding.py  openrouter.py  osint.py  osint_report.py  osint_schemas.py  report.py  rss.py  run.py  schemas.py
forecast/accuracy/: __init__.py  __main__.py  db.py  evaluate.py  predictions.db  report.py
prompts/: accuracy_evaluator.md  council_head.md  council_member.md  council_member_osint.md  report_author.md
reports/: ACCURACY.md
reports/2026-04-18_235440/: grounding.json  head.json  meta.json  raw.json  report-full.typ  report.typ  synthesis.json
reports/2026-04-18_235440/members/: Council_Member_Claude.json  Council_Member_DeepSeek.json  Council_Member_GLM.json  Council_Member_Gemini.json  Council_Member_Kimi.json
reports/2026-04-19_015039/: grounding.json  head.json  meta.json  osint-report.typ
reports/2026-04-19_015039/members/: Council_Member_Claude.json  Council_Member_DeepSeek.json  Council_Member_GLM.json  Council_Member_Gemini.json  Council_Member_Kimi.json
reports/2026-04-20_024233/: grounding.json  head.json  meta.json  raw.json  report-full.typ  report.typ  synthesis.json
reports/2026-04-20_024233/members/: Council_Member_Claude.json  Council_Member_Grok.json  Council_Member_Kimi.json
templates/: intel-brief.typ
